// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavItem styles should render with default styles and match the snapshot 1`] = `
.circuit-4 {
  display: block;
}

.circuit-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  height: auto;
  margin: 16px;
  padding: 4px;
  cursor: pointer;
  color: #999999;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.circuit-2:hover {
  color: #E6E6E6;
}

.circuit-0 {
  margin-left: 12px;
}

<li
  class="circuit-4"
>
  <a
    class="circuit-2 circuit-3"
  >
    <div
      class="circuit-0 circuit-1"
    />
  </a>
</li>
`;

exports[`NavItem styles should render with default styles and match the snapshot for a secondary NavItem 1`] = `
.circuit-4 {
  display: block;
}

.circuit-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  height: auto;
  margin: 16px;
  padding: 4px;
  cursor: pointer;
  color: #999999;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0px 24px;
  padding: 4px 0px;
  -webkit-transition: top 120ms ease-in-out;
  transition: top 120ms ease-in-out;
}

.circuit-2:hover {
  color: #E6E6E6;
}

.circuit-0 {
  margin-left: 12px;
  margin-left: 0px;
  margin-top: -12px;
  -webkit-transition: margin-top 300ms ease-in-out;
  transition: margin-top 300ms ease-in-out;
  margin-top: 0px;
}

<li
  class="circuit-4"
>
  <a
    class="circuit-2 circuit-3"
  >
    <div
      class="circuit-0 circuit-1"
    />
  </a>
</li>
`;

exports[`NavItem styles should render with disabled state styles and match the snapshot 1`] = `
.circuit-4 {
  display: block;
}

.circuit-0 {
  margin-left: 12px;
}

.circuit-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  height: auto;
  margin: 16px;
  padding: 4px;
  cursor: pointer;
  color: #999999;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: not-allowed;
  color: #333333;
}

<li
  class="circuit-4"
>
  <a
    class="circuit-2 circuit-3"
    disabled=""
  >
    <div
      class="circuit-0 circuit-1"
    />
  </a>
</li>
`;

exports[`NavItem styles should render with selected state styles and match the snapshot 1`] = `
.circuit-4 {
  display: block;
}

.circuit-0 {
  margin-left: 12px;
}

.circuit-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  height: auto;
  margin: 16px;
  padding: 4px;
  cursor: pointer;
  color: #999999;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  color: #FAFBFC;
}

<li
  class="circuit-4"
>
  <a
    class="circuit-2 circuit-3"
  >
    <div
      class="circuit-0 circuit-1"
    />
  </a>
</li>
`;
